--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+li {
+  list-style: none;
+  text-decoration: none;
+}
+.none {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+
+
+}
+.nav {
+  display: flex;
+  margin-bottom: 20px;
+  background-color: rgb(241, 181, 181);
+  padding: 10px;
+  justify-content: space-around;
+  list-style: none;
+}
+footer {
+  background-color: #ccc;
+  bottom: 0;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+}
+.activeStyle {
+  color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.linkCon{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: space-around;
 }
