--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,216 @@
+html {
+  font-size: 62.5%;
+}
+body {
+  background-color: #242333;
+  color: #fff;
+}
 li {
   list-style: none;
   text-decoration: none;
 }
 .none {
   text-decoration: none;
-  color: black;
-  cursor: pointer;
-
-
 }
+/* Navigation */
 .nav {
+  position: absolute;
+  right: 0;
+  min-height: 350px;
+  max-height: 1000px;
+  padding-right: 4rem;
+  background-color: #d1fae5;
   display: flex;
-  margin-bottom: 20px;
-  background-color: rgb(241, 181, 181);
+  flex-direction: column;
+  align-items: flex-start;
   padding: 10px;
-  justify-content: space-around;
-  list-style: none;
+  justify-content: space-between;
+  overflow: hidden;
+  z-index: 1;
+  padding-left: 3rem;
+  padding-bottom: 2rem;
+  border-top-left-radius: 35px;
+  border-bottom-left-radius: 35px;
+  font-size: 1.6rem;
 }
+/* open and close menu */
+.open {
+  width: 100px;
+  transition: all 0.2s ease-in;
+}
+.close {
+  width: 0;
+  opacity: 0;
+  transition: all 0.2s ease-in;
+}
+.closeLink {
+  opacity: 0;
+}
+/* Footer */
 footer {
-  background-color: #ccc;
+  background-color: #01b0d3;
   bottom: 0;
   width: 100%;
   position: fixed;
   display: flex;
-  justify-content: center;
+  font-size: 1.6rem;
+  justify-content: space-around;
+  align-items: center;
   padding: 15px;
 }
+/* active Style */
 .activeStyle {
-  color: black;
+  color: #d41313;
 }
-
-.linkCon{
+/* Profile component */
+.linkCon {
+  display: flex;
+  justify-content: space-around;
+  width: 250px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 20px;
+  background-color: #7dd3fc;
+  border-radius: 2px;
+  animation: zoomIn;
+  animation-duration: 1s;
+}
+/* Menu Icon */
+.menu {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+}
+.menu span {
+  width: 35px;
+  height: 5px;
+  margin-top: 5px;
+  border-radius: 5px;
+  background-color: #01b0d3;
+}
+.menuCon {
+  display: grid;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  position: absolute;
+  top: 10px;
+  z-index: 2;
+  cursor: pointer;
+}
+.closeMenu {
+  right: 10px;
+  transition: all 0.25s ease-in;
+}
+.openMenu {
+  right: 42px;
+  transition: all 0.3s ease-out;
+}
+/* Home Page */
+.homePage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 17rem;
+  font-size: 1.6rem;
+}
+.homePageHeader {
+  margin-bottom: 5rem;
+}
+.homePageBody {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  direction: rtl;
+  line-height: 2.5rem;
+  background-color: #01b0d3;
+  padding: 30px;
+  -webkit-border-top-left-radius: 60px;
+  -webkit-border-bottom-right-radius: 60px;
+  -moz-border-radius-topleft: 60px;
+  -moz-border-radius-bottomright: 60px;
+  border-top-left-radius: 60px;
+  border-bottom-right-radius: 60px;
+  /* Animation */
+  animation: slideInDown;
+  animation-duration: 1s;
+}
+/* About us page */
+.AboutPageBody {
+  background-color: #01b0d3;
+  padding: 30px;
+  -webkit-border-top-left-radius: 60px;
+  -webkit-border-top-right-radius: 100px;
+  -webkit-border-bottom-right-radius: 100px;
+  -moz-border-radius-topleft: 60px;
+  -moz-border-radius-topright: 100px;
+  -moz-border-radius-bottomright: 100px;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+  font-size: 1.8rem;
+  animation: fadeInUp;
+  animation-duration: 1s;
+}
+/* Profile */
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.childCon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.6rem;
+  animation: zoomIn;
+  animation-duration: 1s;
+}
+.childCon p {
+  width: 70%;
+  direction: rtl;
+  line-height: 2.5rem;
+  background-color: #01b0d3;
+  border-radius: 8px;
+  padding: 15px;
+}
+.childCon h3 {
+  margin-bottom: 2rem;
+}
+/* Blogs */
+.blogList {
+  margin-bottom: 1rem;
+  cursor: pointer;
+  background-color: #01b0d3;
+  padding: 5px 15px;
+  border-radius: 5px;
+  animation: pulse;
+  animation-duration: 1s;
+}
+.blogItem {
+  color: #fff;
+}
+.blogPageBody {
+  width: 70%;
+  line-height: 2.5rem;
+  padding: 30px;
+  direction: rtl;
+  margin-bottom: 15px;
+  background-color: #01b0d3;
+  border-radius: 10px;
+  animation: pulse;
+  animation-duration: 1s;
+}
+@media screen and (min-width: 1024px) {
+  
+  .nav {
+    min-height: 550px;
+    max-height: 1000px;
+    font-size: 1.8rem;
+  }
+  .homePage , footer , .childCon {
+    font-size: 1.8rem;
+  }
 }
